--- a/src/components/PhotoStudio.css
+++ b/src/components/PhotoStudio.css
@@ -165,7 +165,7 @@
 }
 
 .studio-result{
-    background-image: url('/images/ch.png');
+    background-image: url('/images/ch .png');
     background-size: cover;
     background-position: center;
     width: 100%;
@@ -216,9 +216,25 @@
 
 /* MEDIA QUERIES */
 @media (max-width: 768px) {
-    .studio-container, .studio-result {
+    .photoStudio {
+        padding: 10px;
+    }
+    .studio-container {
         padding: 15px;
-        margin: 20px auto;
+        margin: auto;
+        width: 100%;
+        max-width: 100%;
+        border-radius: 15px;
+    }
+
+    .studio-webcam {
+      aspect-ratio: 4/3;
+      border-radius: 15px;
+    }
+
+    .photostrip-frame {
+      padding: 15px;
+      border-radius: 15px;
     }
 
     .result-controls {
